gcc/testsuite/rust/rustc/ui/return/tail-expr-if-as-return_dg.rs
fn main() {
    if true {
        "" // { dg-error ".E0308." "" { target *-*-* } }
    }
}

